--- a/FAQ/FAQ.html
+++ b/FAQ/FAQ.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <title> FAQ </title>
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Link naar de CSS sheet -->
