--- a/Login_folder/Login_screen.html
+++ b/Login_folder/Login_screen.html
@@ -33,14 +33,12 @@ session_start();
                 }
 
                 .login-box {
-                width: 300px;
+                width: 350px;
                 padding: 20px;
                 background: #cab89d8c;
                 box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
                 border: 1px solid #C4AE8C;
                 border-radius: 8px;
-                margin-top: 6%;
-                margin-bottom: 8%;
                 position: relative;
                 align-items: center;
                 }
@@ -57,16 +55,19 @@ session_start();
                 box-sizing: border-box;
                 flex-direction: column;
                 margin-bottom: 20px;
+                font-family: Arial, Helvetica, sans-serif;
                 }
 
                 input[type="text"]:focus,
                 input[type="password"]:focus {
                 border-color: #04AA6D;
                 background-color: #f8f8f8;
+                font-family: Arial, Helvetica, sans-serif;
                 }
 
                 input[type="submit"] {
                 width: 100%;
+                font-family: Arial, Helvetica, sans-serif;
                 }
 
                 .registerbtn {
@@ -94,7 +95,7 @@ session_start();
                 #regForm {
                 background-color: #ffffff;
                 margin: 100px auto;
-                font-family: Raleway;
+                font-family: Arial, Helvetica, sans-serif;
                 padding: 40px;
                 width: 70%;
                 min-width: 300px;
@@ -104,7 +105,7 @@ session_start();
                 padding: 10px;
                 width: 5%;
                 font-size: 12px;
-                font-family: Raleway;
+                font-family: Arial, Helvetica, sans-serif;
                 border: 1px solid #aaaaaa;
                 }
 
@@ -120,7 +121,7 @@ session_start();
                 border-radius: 25px;
                 padding: 10px 20px;
                 font-size: 17px;
-                font-family: Raleway;
+                font-family: Arial, Helvetica, sans-serif;
                 cursor: pointer;
                 } 
 
